@@ -2,16 +2,14 @@
 * Prio 1
 
 - rewrite: check all "todo check"
-- skip(); with ; following should also work!
 
 - unit tests:
   -> rule skipped for interpreter (with HIDDEN or skip())
   -> bad grammar (when starting to write a new grammar, check for no exception in that case)
      -> with { not closed inside rule and nothing until the end (that is no })
   -> remove left recursion
-  -> read tokenVocab
   -> rename internal tokens identified inside blocks with $
-  -> double-quote string in ST, for example: write_to("<id>",<id>)
+  -> double-quoted string in ST, for example: write_to("<id>",<id>)
   -> check that no syntax error is reported with rewrite (and reported when it is a real problem)
 
 - is GrammarSyntax still used for left recursion -> check and UT
