@@ -2,9 +2,10 @@
 Version 1.0b10 -
 
 - syntax coloring parser has been rewritten
-- can now display the line numbers
+- can now display the line numbers in the grammar editor
 - ability to jump to tokens defined in the options block
 - ability to debug again (after having launched the debugger once in the current session)
+- reverted file extension to *.g only
 - fixed a bug when double-clicking a word: selection would be incorrect
 - fixed a bug when trying to generate a parser/lexer from a tree grammar (would loop forever)
 
